--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   ],
   "lang": "it",
   "orientation": "portrait-primary",
-  "start_url": "",
+  "start_url": "index.html",
   "background_color": "#fff",
   "theme_color": "#222222",
   "display": "fullscreen"
